# MAI-OOP-Lab5-2025

./: .gitignore  README.md
lab_5/: CMakeLists.txt  README.md  main.cpp
lab_5/include/: my_memory_resource.h  vector.h  vector_iterator.h
lab_5/src/: my_memory_resource.cpp
lab_5/test/: test05.cpp
